--- a/mapa.html
+++ b/mapa.html
@@ -49,8 +49,10 @@
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--no-bg mbr-figure--caption-outside-bottom">
                     <div class="mbr-figure__map mbr-google-map">
                         <p class="mbr-google-map__marker" data-coordinates="40.748384,-73.9854792">Empire State Building</p>
+                        <p class="mbr-google-map__marker" data-coordinates="31.748384,-73.9854792">2Empire State Building</p>
                     </div>
                 </figure>
+
             </div>
         </div>
     </div>
